# andromeda-desktop

./: Dockerfile  README.md  docker-compose.yml  main.py  planets.json  pyproject.toml  requirements.txt  setting.py  un  utils.py
.github/workflows/: .github_ci.yml
app/: coordenates.py  esp_adapter.py  esp_adapter_mock.py
dist_1/main/: libbluetooth.so.3  main
imagem2/: Dockerfile
imagem3/: Dockerfile
imagem4/: Dockerfile  class.java
screens/: calibrate.py  free_move.py  home.py
screens/andromedadesktop5/: Dockerfile
tests/: test_coord.py
