[tool.poetry]
name = "andromeda-desktop"
version = "0.0.1"
description = ""
authors = ["lucas <medeirosrosalucas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
python-decouple = "3.4"
astropy = "4.3.1"
Pillow = "8.3.2"
gattlib = "0.20201113"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
pytest-asyncio = "0.15.1"
pytest-mock = "3.6.1"
coverage = "6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"